# binary-game

./: README.md
src/: CMakeLists.txt  algorithms.cpp  algorithms.h  main.cpp
src/GameEngine/: BinarySequence.cpp  BinarySequence.h  GameEngine.cpp  GameEngine.h  GameResult.cpp  GameResult.h  Player.cpp  Player.h
